--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "lite": "lite-server",
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
- },
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "prettier": "2.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
