--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "2-bootstrap",
-  "version": "1.0.0",
-  "description": "This is a website for the fictional campsites review site NuCamp.",
-  "main": "index.html",
-  "scripts": {
-    "lite": "lite-server",
-    "start": "npm run lite",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "lite-server": "^2.6.1",
-    "prettier": "2.3.0"
-  },
-  "dependencies": {
-    "bootstrap": "^4.5.2",
-    "bootstrap-social": "^5.1.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
-  }
+    "name": "2-bootstrap",
+    "version": "1.0.0",
+    "description": "This is a website for the fictional campsites review site NuCamp.",
+    "main": "index.html",
+    "scripts": {
+        "lite": "lite-server",
+        "start": "npm run lite",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "scss": "node-sass -o css/ css/"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "lite-server": "^2.6.1",
+        "node-sass": "^4.14.1",
+        "prettier": "2.3.0"
+    },
+    "dependencies": {
+        "bootstrap": "^4.5.2",
+        "bootstrap-social": "^5.1.1",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.5.1",
+        "popper.js": "^1.16.1"
+    }
 }
